<resources>
    <string name="app_name">SmartStock</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_to_smartstock">Welcome to SmartStock</string>
    <string name="dont_have_an_account">Don\'t have an account?"</string>
    <string name="register_LINK"><u>Sign up</u></string>
    <string name="Sign_up"><b>Sign up</b></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="login_LINK"><u>Login</u></string>
    <string name="company_name">Company Name</string>
    <string name="RegisterButton">Register</string>
    <string name="LogoutButton">Logout</string>"
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_description">Enter your email address and we will send you a link to reset your password.</string>
    <string name="send_link">Send Link</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_mainpageog">MAINPAGEOG</string>
    <string name="title_activity_main_pageog">MainPageog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage">manage</string>
    <string name="notification">notification</string>
    <string name="profile">profile</string>
    <string name="home">home</string>
    <string name="add_item">Add/View Items</string>
    <string name="remove_item">Remove Items</string>
    <string name="add_warehouse">Add/View Warehouses</string>
    <string name="remove_warehouse">Remove Warehouses</string>
    <string name="add_supplier">Add/View Suppliers</string>
    <string name="remove_supplier">Remove Suppliers</string>
    <string name="loading">Loading...</string>
    <string name="add_employee">Add/View Employees</string>
    <string name="remove_employee">Remove Employees</string>
    <string name="Items">Items</string>
    <string name="add_item_button">Add Item</string>
    <string name="details">Please enter the details below</string>
    <string name="item_id">Item ID</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="item_category">Item Category</string>
    <string name="unit_weight">Unit Weight</string>
    <string name="cost_price">Cost Price</string>
    <string name="selling_price">Selling Price</string>
    <string name="item_code">Item Code</string>
    <string name="pricing_weight"><![CDATA[Pricing & Weight]]></string>
    <string name="category_identification"><![CDATA[Category & Identification]]></string>
    <string name="basic_information">Basic Information</string>
    <string name="click_for_more_information">Click for more information</string>
    <string name="item_added_n_a">Item Added: </string>
    <string name="stock_n_a">Stock: </string>
    <string name="sale_price_n_a">Sale Price: </string>
    <string name="item_id_n_a">Item ID: </string>
    <string name="item_name_n_a">Item Name: </string>
    <string name="n_a">N/A</string>
    <string name="item_details">Item Details</string>
    <string name="item_description_n_a">Item Description: </string>
    <string name="item_category_n_a">Item Category: </string>
    <string name="item_code_n_a">Item Code:</string>
    <string name="unit_weight_n_a">Unit Weight:</string>
    <string name="cost_price_n_a">Cost Price:</string>
    <string name="selling_price_n_a">Selling Price:</string>
    <string name="employees">Employees</string>
    <string name="add_employee_button">Add Employee</string>
    <string name="register_employee">Register Employee</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_details">Contact Details</string>
    <string name="username">Username</string>
    <string name="employee_information">Employee Information</string>
    <string name="fill_in_the_details">Fill in the details</string>
    <string name="view_items">View Items</string>
    <string name="view_warehouses">View Warehouses</string>
    <string name="view_suppliers">View Suppliers</string>
    <string name="add_stock">Add Stock</string>
    <string name="quantity">Quantity</string>
    <string name="stock_information">Stock Information</string>
    <string name="enter_stock_details_below">Enter stock details below</string>
    <string name="item_added">Item Added</string>
    <string name="do_you_want_to_add_stock_for_this_item_now">Do you want to add stock for this item now?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="username_colon">Username:</string>
    <string name="email_colon">Email:</string>
    <string name="company_colon">Company:</string>
    <string name="role_colon">Role:</string>
    <string name="tap_for_more_details">Tap for more details</string>
    <string name="salary">Salary</string>
    <string name="employee_id">Employee ID:</string>
    <string name="name">Name:</string>
    <string name="company_contact"><![CDATA[Company & Contact]]></string>
    <string name="company">Company:</string>
    <string name="contact_number_colon">Contact Number:</string>
    <string name="salary_details">Salary Details</string>
    <string name="salary_colon">Salary:</string>
    <string name="address_colon">Address:</string>
    <string name="employee_details">Employee Details</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="make_a_transaction">Make a Transaction</string>
    <string name="make_transaction">Make Transaction</string>
    <string name="enter_transaction_details">Enter transaction details</string>
    <string name="transaction_info">Transaction Info</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_date_yyyy_mm_dd">Transaction Date (YYYY-MM-DD)</string>
    <string name="stock_user_info"><![CDATA[Stock & User Info]]></string>
    <string name="stock_id">Stock ID</string>
    <string name="handled_by_user_id">Handled By (User ID)</string>
    <string name="quantity_price"><![CDATA[Quantity & Price]]></string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="date">Date:</string>
    <string name="stock">Stock:</string>
    <string name="handled_by">Handled By:</string>
    <string name="transaction_ID">Transaction ID:</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="customer_information">Customer Information</string>
    <string name="customer_name_colon">Customer Name:</string>
    <string name="transaction_information">Transaction Information</string>
    <string name="transaction_id_colon">Transaction ID:</string>
    <string name="type_colon">Type:</string>
    <string name="date_colon">Date:</string>
    <string name="time">Time:</string>
    <string name="item_information">Item Information</string>
    <string name="item_name_colon">Item Name:</string>
    <string name="quantity_colon">Quantity:</string>
    <string name="customer_phone_colon">Customer Phone:</string>
    <string name="handled_by_heading">Handled By</string>
    <string name="name_colon">Name:</string>
    <string name="email_colon2">Email:</string>
    <string name="phone">Phone:</string>
    <string name="show_transactions_from">Show transactions from:</string>
    <string name="filter_by">Filter by:</string>
    <string name="remove_item_button">Remove Item</string>
    <string name="select_items_to_remove">Select Items to remove</string>
    <string name="remove_selected_items">Remove Selected Items</string>
    <string name="are_you_sure_you_want_to_remove_the_selected_items">Are you sure you want to remove the selected items?</string>
    <string name="select_employees">Select Employees</string>
    <string name="select_employees_to_remove">Select employees to remove</string>
    <string name="remove_selected_employees">Remove Selected Employees</string>
    <string name="price_colon">Price:</string>
    <string name="profit_colon">Profit:</string>
    <string name="total_price">Total Price:</string>
    <string name="download_pdf">Download PDF</string>
    <string name="available_quantity">Available Quantity:</string>
    <string name="_0">0</string>
    <string name="edit_item_details">Edit Item Details</string>
    <string name="change_item_details">Change Item Details</string>
    <string name="change_details">Change Details</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="edit_employee_details">Edit Employee Details</string>
    <string name="enter_warehouse_details_below">Enter warehouse details below</string>
    <string name="add_warehouse_header">Add Warehouse</string>
    <string name="warehouse_id">Warehouse ID</string>
    <string name="warehouse_name">Warehouse Name</string>
    <string name="warehouse_location">Warehouse Location</string>
    <string name="manager_info">Manager Info</string>
    <string name="select_manager">Select Manager</string>
    <string name="select_stocks_to_add">Select Stocks to Add</string>
    <string name="warehouses">Warehouses</string>
    <string name="warehouse_details">Warehouse Details</string>
    <string name="feature_coming_soon">Feature coming soon...</string>
    <string-array name="days_filter_options">
        <item>All</item>
        <item>Last 7 Days</item>
        <item>Last 15 Days</item>
        <item>Last 30 Days</item>
    </string-array>


</resources>