<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_card_background"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_item"
        android:textColor="#FC3636"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_remove_the_selected_items"
        android:textColor="#444"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="end"
        android:weightSum="2">

        <Button
            android:id="@+id/noBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:textColor="#D32F2F"
            android:backgroundTint="@android:color/transparent"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textColor="#D32F2F"
            android:backgroundTint="@android:color/transparent"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>
