<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".registration_activity">

    <ImageView
        android:id="@+id/top_shape"
        android:layout_width="215dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/login_shape1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/Sign_up"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:drawableStart="@drawable/full_name_icon"
        android:drawablePadding="10dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.85" />

    <EditText
        android:id="@+id/companyName"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/company_name_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/company_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/companyName"
        app:layout_constraintStart_toStartOf="@+id/companyName"
        app:layout_constraintTop_toBottomOf="@+id/companyName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/editTextText4"
        app:layout_constraintStart_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText5"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF0000"
        android:text="@string/RegisterButton"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordLayout"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordLayout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterButton" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:onClick="tologin"
        android:text="@string/login_LINK"
        android:textColor="#0000FF"
        android:textColorLink="#0000FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick,TouchTargetSizeCheck,UsingOnClickInXml" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>