<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".Login">

    <EditText
        android:id="@+id/Email"
        android:layout_width="321dp"
        android:layout_height="56dp"
        android:layout_marginTop="336dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Password EditText inside TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
    android:id="@+id/Logintext"
    android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="256dp"
android:text="Login"
android:textSize="37sp"
android:textStyle="bold"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.137"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
tools:ignore="HardcodedText" />

<TextView
android:id="@+id/textView2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="220dp"
android:text="@string/welcome_to_smartstock"
android:textSize="18sp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.2"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<ProgressBar
android:id="@+id/progressbar"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="20dp"
android:visibility="gone"
app:layout_constraintTop_toBottomOf="@+id/LoginButton"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent" />

<Button
android:id="@+id/LoginButton"
android:layout_width="321dp"
android:layout_height="59dp"
android:layout_marginBottom="140dp"
android:backgroundTint="#FF0000"
android:text="@string/login"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.505"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
app:layout_constraintVertical_bias="0.37"
tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />

<TextView
android:id="@+id/textView3"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="96dp"
android:text="@string/dont_have_an_account"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/LoginButton"
app:layout_constraintVertical_bias="0.718" />

<TextView
android:id="@+id/signup"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="44dp"
android:contentDescription="TODO"
android:text="@string/register_LINK"
android:textColor="#0000FF"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.0"
app:layout_constraintStart_toEndOf="@+id/textView3"
app:layout_constraintTop_toBottomOf="@+id/LoginButton"
app:layout_constraintVertical_bias="0.929"
tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />

<ImageView
android:id="@+id/top_shape"
android:layout_width="215dp"
android:layout_height="200dp"
android:layout_margin="0dp"
android:adjustViewBounds="true"
android:padding="0dp"
android:scaleType="fitXY"
android:src="@drawable/login_shape1"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<TextView
android:id="@+id/forgot_password"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="8dp"
android:text="@string/forgot_password"
android:textColor="#FF0000"
app:layout_constraintBottom_toTopOf="@+id/LoginButton"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.867"
app:layout_constraintStart_toStartOf="parent" />

<com.google.android.material.imageview.ShapeableImageView
android:id="@+id/appLogo"
android:layout_width="130dp"
android:layout_height="130dp"
android:layout_marginTop="28dp"
android:layout_marginEnd="28dp"
android:src="@drawable/app_logo"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:shapeAppearanceOverlay="@style/CircleImageViewStyle"
android:scaleType="centerCrop" />
    </androidx.constraintlayout.widget.ConstraintLayout>