<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:layout_height="match_parent"
    tools:context=".forgotPassword">
    <ImageView
        android:id="@+id/top_shape"
        android:layout_width="215dp"
        android:layout_height="200dp"
        android:layout_margin="0dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_shape1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="321dp"
        android:layout_height="56dp"
        android:layout_marginTop="360dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:padding="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields,VisualLintOverlap" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/reset_password_title"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="373dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/reset_password_description"
        android:textColor="#666666"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/send_link"
        android:layout_width="321dp"
        android:layout_height="59dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="#FF0000"
        android:text="@string/send_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintVertical_bias="0.182"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>